[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Armadilha_corda.gd" type="Script" id=1]
[ext_resource path="res://Assets/Efeitos_sonoros/Outros/trap.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 0.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.5, 7.5 )

[node name="Armadilha_corda" type="Area2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 60.0
margin_bottom = 1.0
color = Color( 0.811765, 0.666667, 0.505882, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_top = -1.0
margin_right = 60.0
margin_bottom = 2.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, 0.5 )
shape = SubResource( 1 )

[node name="Detector_jogador" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector_jogador"]
modulate = Color( 0.0392157, 0.168627, 1, 1 )
position = Vector2( 29.5, -5.5 )
shape = SubResource( 2 )

[node name="Som_ativada" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Armadilha_corda_body_entered"]
[connection signal="body_entered" from="Detector_jogador" to="." method="_on_Detector_jogador_body_entered"]
